[gd_scene load_steps=2 format=2]

[ext_resource path="res://entities/DialogueNode.gd" type="Script" id=1]

[node name="DialogueNode" type="GraphNode"]
margin_right = 300.0
margin_bottom = 342.0
size_flags_vertical = 3
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color( 1, 1, 1, 1 )
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color( 1, 1, 1, 1 )
slot/8/left_enabled = false
slot/8/left_type = 0
slot/8/left_color = Color( 1, 1, 1, 1 )
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color( 1, 1, 1, 1 )
slot/9/left_enabled = false
slot/9/left_type = 0
slot/9/left_color = Color( 1, 1, 1, 1 )
slot/9/right_enabled = false
slot/9/right_type = 0
slot/9/right_color = Color( 1, 1, 1, 1 )
slot/10/left_enabled = false
slot/10/left_type = 0
slot/10/left_color = Color( 1, 1, 1, 1 )
slot/10/right_enabled = false
slot/10/right_type = 0
slot/10/right_color = Color( 1, 1, 1, 1 )
slot/11/left_enabled = false
slot/11/left_type = 0
slot/11/left_color = Color( 1, 1, 1, 1 )
slot/11/right_enabled = false
slot/11/right_type = 0
slot/11/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 284.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="Name"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="Name"]
margin_left = 46.0
margin_right = 268.0
margin_bottom = 24.0
size_flags_horizontal = 3
expand_to_text_length = true
placeholder_text = "Required"

[node name="Text" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 49.0
margin_right = 284.0
margin_bottom = 233.0

[node name="Label" type="Label" parent="Text"]
margin_top = 85.0
margin_right = 31.0
margin_bottom = 99.0
text = "Text:"

[node name="Spacer" type="Label" parent="Text"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 35.0
margin_right = 35.0
margin_bottom = 184.0
text = "









"

[node name="TextEdit" type="TextEdit" parent="Text"]
margin_left = 39.0
margin_right = 268.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
highlight_current_line = true
show_line_numbers = true
draw_spaces = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShouldEnd" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 234.0
margin_right = 284.0
margin_bottom = 258.0

[node name="Label" type="Label" parent="ShouldEnd"]
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "Should End:"

[node name="CheckBox" type="CheckBox" parent="ShouldEnd"]
margin_left = 78.0
margin_right = 102.0
margin_bottom = 24.0

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 259.0
margin_right = 284.0
margin_bottom = 263.0

[node name="ChoicesButton" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 264.0
margin_right = 284.0
margin_bottom = 284.0

[node name="Label" type="Label" parent="ChoicesButton"]
margin_top = 3.0
margin_right = 50.0
margin_bottom = 17.0
text = "Choices"

[node name="Button" type="Button" parent="ChoicesButton"]
margin_left = 54.0
margin_right = 91.0
margin_bottom = 20.0
text = "Add"

[node name="Choices" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 285.0
margin_right = 284.0
margin_bottom = 285.0

[node name="HSeparator2" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 286.0
margin_right = 284.0
margin_bottom = 290.0

[node name="OnEnterSetVariablesButton" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 291.0
margin_right = 284.0
margin_bottom = 311.0

[node name="Label" type="Label" parent="OnEnterSetVariablesButton"]
margin_top = 3.0
margin_right = 118.0
margin_bottom = 17.0
text = "On Enter Variables"

[node name="Button" type="Button" parent="OnEnterSetVariablesButton"]
margin_left = 122.0
margin_right = 159.0
margin_bottom = 20.0
text = "Add"

[node name="OnEnterSetVariables" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 312.0
margin_right = 284.0
margin_bottom = 312.0

[node name="HSeparator3" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 313.0
margin_right = 284.0
margin_bottom = 317.0

[node name="OnEnterFunctionsButton" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 318.0
margin_right = 284.0
margin_bottom = 338.0

[node name="Label" type="Label" parent="OnEnterFunctionsButton"]
margin_top = 3.0
margin_right = 122.0
margin_bottom = 17.0
text = "On Enter Functions"

[node name="Button" type="Button" parent="OnEnterFunctionsButton"]
margin_left = 126.0
margin_right = 163.0
margin_bottom = 20.0
text = "Add"

[node name="OnEnterFunctions" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 339.0
margin_right = 284.0
margin_bottom = 339.0
